frame/support/test/tests/construct_runtime_ui/invalid_meta_literal.stderr
error: feature = 1
                 ^ expected one of `<key>`, `all`, `any`, `not` here
 --> tests/construct_runtime_ui/invalid_meta_literal.rs:7:3
  |
7 |         #[cfg(feature = 1)]
  |         ^
